añadiendo gif bailando

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Branch</title>
 	</head>
 	<body>
+	<div><img src="http://olegif.com/bin/gifs/00/07/82.gif" alt="gif bailando"></div>
 	
 		
 	</body>
