--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	</head>
 	<body>
 	<div><img src="http://olegif.com/bin/gifs/00/07/82.gif" alt="gif bailando"></div>
-	
+	<div>
+		<img src="http://i.giphy.com/l3fQgrK34exMtXJFC.gif" alt="bailar">
+	</div> <!--MONTSE-->
 		
 	</body>
 </html>
